[FIX] Changed align-items to lui flex-align-items to handle prefixes

--- a/scss/core/elements/input/checkbox.radio/_input.checkbox.radio.common.scss
+++ b/scss/core/elements/input/checkbox.radio/_input.checkbox.radio.common.scss
@@ -43,6 +43,8 @@
 				&:after {
 					position: absolute;
 					top: 1px;
+					top: 50%;
+					transform: translateY(-50%);
 					left: 0;
 					display: inline-block;
 					width: 1.1em;
